src/assets/css/library.css
/* ... */
#insideDivLibrary .divImageBooks:hover {
    cursor: pointer;
    transform: scale(1.05);
    filter: brightness(102%);
    transition: transform 0.1s ease-in;
}

#insideDivLibrary .divImageBooks img {
    width: 100%;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.1) 0px 8px 10px -6px;
}

#insideDivLibrary .divDetailsBooks {
    margin-top: 10px;
}

#insideDivLibrary .divTitleBooks {
    height: 55px;
    overflow-x: auto;
    scrollbar-width: none;
    transition: color 1s ease-out;
}

#insideDivLibrary .divTitleBooks:hover {
    cursor: pointer;
    color: rgb(36, 101, 255);
    transition: color;
}

#insideDivLibrary .divTitleBooks::-webkit-scrollbar {
    display: none;
}

#insideDivLibrary .bookTitleSpan {
    font-weight: bold;
    font-size: 1.1rem;
}

#insideDivLibrary .authorsUlBooks {
    display: flex;
    gap: 10px;
    white-space: nowrap;
    overflow-x: auto;
    scrollbar-width: none;
}

#insideDivLibrary .authorsUlBooks::-webkit-scrollbar {
    display: none;
}

#insideDivLibrary .authorLiBooks {
    color: rgb(0, 104, 255);
    font-size: 1.2rem;
    transition: color 1s ease-out;
    flex-shrink: 0;
}

#insideDivLibrary .authorLiBooks:hover {
    color: rgb(98, 160, 250);
    cursor: pointer;
    transition: color;
}

#insideDivLibrary .categoryUlBooks {
    display: flex;
    gap: 10px;
    overflow-x: auto;
    margin-top: 8px;
    scrollbar-width: none;
}

#insideDivLibrary .categoryUlBooks::-webkit-scrollbar {
    display: none;
}

#insideDivLibrary .categoryLiBooks {
    flex-shrink: 0;
    padding: 2px 12px;
    border-radius: 5px;
    font-size: 0.8rem;
}

#divPackPaginationLibrary {
    display: flex;
    gap: 15px;
}

#divLibraryPagination {
    margin: 80px 0px;
    display: flex;
    gap: 20px;
}

#divNumbersPagination {
    display: flex;
    align-items: center;
}

#divLibraryPagination .arrowsPagination {
    color: rgb(0, 104, 255);
    transition: color 0.2s ease-in-out;
}

#divLibraryPagination .arrowsPagination:hover {
    cursor: pointer;
    color: rgb(70, 143, 251);
}

#divLibraryPagination .ulPaginationLibrary {
    display: flex;
    font-size: 1.3rem;
    gap: 10px;
}

#divLibraryPagination .liPaginationLibrary {
    color: rgb(0, 104, 255);
    transition: color 0.2s ease-in-out;
}

#divLibraryPagination .liPaginationLibrary:hover {
    cursor: pointer;
    color: rgb(70, 143, 251);
}

#divLibraryPagination .divArrowsLibrary {
    display: flex;
    align-items: center;
    gap: 6px !important;
}

#modalBook {
    border: 1px solid gray;
    display: none;
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -45%);
    width: 70%;
    height: 550px;
    background-color: rgb(250, 250, 250);
    z-index: 1000;
}

#modalBook #iconXModalBook {
    width: 60px;
    height: 60px;
    padding: 20px;
    position: absolute;
    right: 0px;
    display: flex;
    z-index: 20;
}

#modalBook #iconXModalBook svg {
    width: 100%;
    height: 100%;
    display: flex;
    & path {
        transition: fill 0.2s ease-in-out;
    }
}

#modalBook #iconXModalBook svg:hover {
    cursor: pointer;
    & path {
        fill: red;
    }
}

#modalBook #divBookModalContent {
    display: flex;
    padding: 0px;
    align-items: center;
    width: 100%;
}

#modalBook #divBookModalImg {
    width: 30%;
    min-width: 180px;
    height: 100%;
    justify-content: center;
    position: relative;
    padding-left: 40px;
    padding-top: 50px;
}

#modalBook #divBookModalImg #imgBookDesktopModal {
    left: 0px;
    top: 0px;
    width: 100%;
    min-height: 255px;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.1) 0px 8px 10px -6px;
    animation: 1.5s linear 0s infinite normal none running skeleton-books;
    z-index: 10000 !important;
}

#modalBook #divBookModalDetails {
    height: 100%;
    width: 70%;
    padding: 50px 20px 0px 30px;
    font-size: 1.1rem;
    overflow: hidden auto;
}

#modalBook #divBookModalDetails::-webkit-scrollbar {
    width: 4px;
}

#modalBook #divBookModalDetails::-webkit-scrollbar-thumb {
    background-color: gray !important;
}

#modalBook #divBookModalDetails::-webkit-scrollbar-track {
    background-color: lightgray !important;
}

#modalBook #divBookModalDetails h3 {
    font-weight: bold;
    font-size: 2rem;
    margin-bottom: 10px;
}

#modalBook #divBookModalDetails .authorsUlBooksModal {
    display: flex;
    gap: 5px;
    color: rgb(0, 104, 255);
    font-size: 1.2rem;
    overflow: auto hidden;
    white-space: nowrap !important;
}

#modalBook #divBookModalDetails .authorsUlBooksModal::-webkit-scrollbar {
    height: 4px;
}

#modalBook #divBookModalDetails .authorsUlBooksModal::-webkit-scrollbar-thumb {
    background-color: lightgray !important;
}

#modalBook #divBookModalDetails .authorsUlBooksModal::-webkit-scrollbar-track {
    background-color: rgb(250, 250, 250) !important;
}

#modalBook #divBookModalDetails .authorLiBooksModal:hover {
    cursor: pointer;
    color: rgb(59, 139, 255);
}

#modalBook #divBookModalDetails .authorsUlBooksModal::before {
    content: "Autor/es: ";
    color: black;
    font-weight: bold;
}

#modalBook #divBookModalDetails #pagesBookModal::before {
    content: "Cantidad de Páginas: ";
    color: black;
    font-weight: bold;
}

#modalBook #divBookModalDetails p {
    height: 170px;
    text-align: justify;
    overflow: hidden auto;
    padding: 5px 15px 50px 0px;
    mask: linear-gradient(360deg, transparent, white 20%);
    scrollbar-width: thin; 
    scrollbar-color: lightgray rgb(250, 250, 250); 
}

#modalBook #divBookModalDetails p::-webkit-scrollbar {
    width: 4px;
}

#modalBook #divBookModalDetails p::-webkit-scrollbar-thumb {
    background-color: lightgray !important;
}

#modalBook #divBookModalDetails p::-webkit-scrollbar-track {
    background-color: rgb(250, 250, 250) !important;
}
/* ... */

